basic-line chart created

--- a/highcharts-element.html
+++ b/highcharts-element.html
@@ -1,6 +1,5 @@
 <link rel="import" href="../polymer/polymer-element.html">
 <script type="application/javascript" src="../highcharts/highcharts.js"></script>
-<script type="application/javascript" src="../highcharts/modules/series-label.js"></script>
 <script type="application/javascript" src="../highcharts/modules/exporting.js"></script>
 <script type="application/javascript" src="../highcharts/modules/export-data.js"></script>
 
@@ -13,10 +12,10 @@
 			}
 
 			#container {
-				min-width: 310px;
-				max-width: 800px;
+				max-width: 900px;
+				margin: auto;
 				height: 400px;
-				margin: 0 auto
+				margin: 0 auto;
 			}
 		</style>
 		<div id="container"></div>
@@ -38,58 +37,47 @@
 
 			static get properties() {
 				return {
-					chart: {
-						type: 'bar'
-					},
 					title: {
 						type: String
-					},
-					xAxis: {
-						categories: {
-							type: Array
-						}
-					},
-					yAxis: {
-						title: {
-							type: String
-						}
-					},
-					series: [{
-						name: {
-							type: String
-						},
-						data: {
-							type: Array
-						}
-					}]
+					}
 				}
 			}
 
-			render() {
-				//super.ready();
+			ready() {
+				super.ready();
 
 				this.highcharts = Highcharts.chart(this.$.container, {
-
 					chart: {
-						type: 'bar'
+						type: 'line'
 					},
 					title: {
-						text: 'Fruit Consumption'
+						text: 'Monthly Average Temperature'
+					},
+					subtitle: {
+						text: 'Source: WorldClimate.com'
 					},
 					xAxis: {
-						categories: ['Apples', 'Bananas', 'Oranges']
+						categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
 					},
 					yAxis: {
 						title: {
-							text: 'Fruit eaten'
+							text: 'Temperature (°C)'
+						}
+					},
+					plotOptions: {
+						line: {
+							dataLabels: {
+								enabled: true
+							},
+							enableMouseTracking: false
 						}
 					},
 					series: [{
-						name: 'Jane',
-						data: [1, 0, 4]
+						name: 'Tokyo',
+						data: [7.0, 6.9, 9.5, 14.5, 18.4, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
 					}, {
-						name: 'John',
-						data: [5, 7, 3]
+						name: 'London',
+						data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
 					}]
 				});
 			}
