--- a/highcharts-element.html
+++ b/highcharts-element.html
@@ -7,10 +7,6 @@
 <dom-module id="highcharts-element">
 	<template>
 		<style>
-			:host {
-				display: block;
-			}
-
 			#container {
 				max-width: 900px;
 				margin: auto;
@@ -37,9 +33,14 @@
 
 			static get properties() {
 				return {
-					title: {
-						type: String
-					}
+
+				}
+			}
+
+			showChoosenPlot(data) {
+				var city = data;
+				switch (data) {
+					
 				}
 			}
 
@@ -69,15 +70,18 @@
 							dataLabels: {
 								enabled: true
 							},
-							enableMouseTracking: false
+							enableMouseTracking: true
 						}
 					},
 					series: [{
 						name: 'Tokyo',
-						data: [7.0, 6.9, 9.5, 14.5, 18.4, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
+						data: [7.0, 6.9, 9.5, 14.5, 18.4, 21.5, 25.2, 27.5, 23.3, 18.3, 13.9, 9.6]
 					}, {
-						name: 'London',
+						name: 'Boston',
 						data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
+					}, {
+						name: 'Karlsruhe',
+						data: [5.9, 5.2, 5.7, 9.5, 13.9, 17.2, 18.0, 17.6, 16.2, 12.3, 8.6, 6.8]
 					}]
 				});
 			}
