--- a/demo/index.html
+++ b/demo/index.html
@@ -27,15 +27,14 @@
       <h3>Basic highcharts-element demo</h3>
       <demo-snippet>
         <template>
-
-          <paper-button raised onclick="showChoosenPlot('Tokyo')">Tokyo</paper-button>
-          <paper-button raised onclick="showChoosenPlot('Boston')">Boston</paper-button>
-          <paper-button raised onclick="showChoosenPlot('Karlsruhe')">Karlsruhe</paper-button>
-
-          
-
+          <paper-button raised onclick="">Tokyo</paper-button>
+          <paper-button raised onclick="createChartIfNotDone">Boston</paper-button>
+          <paper-button raised onclick="">Karlsruhe</paper-button>
           <highcharts-element></highcharts-element>
         </template>
+        <script>
+
+        </script>
       </demo-snippet>
     </div>
   </body>
