--- a/highcharts-element.html
+++ b/highcharts-element.html
@@ -2,6 +2,7 @@
 <script type="application/javascript" src="../highcharts/highcharts.js"></script>
 <script type="application/javascript" src="../highcharts/modules/exporting.js"></script>
 <script type="application/javascript" src="../highcharts/modules/export-data.js"></script>
+<script type="application/javascript" src="chart.js"></script>
 
 
 <dom-module id="highcharts-element">
@@ -37,53 +38,14 @@
 				}
 			}
 
-			showChoosenPlot(data) {
-				var city = data;
-				switch (data) {
-					
-				}
-			}
-
 			ready() {
 				super.ready();
+			}
 
-				this.highcharts = Highcharts.chart(this.$.container, {
-					chart: {
-						type: 'line'
-					},
-					title: {
-						text: 'Monthly Average Temperature'
-					},
-					subtitle: {
-						text: 'Source: WorldClimate.com'
-					},
-					xAxis: {
-						categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
-					},
-					yAxis: {
-						title: {
-							text: 'Temperature (°C)'
-						}
-					},
-					plotOptions: {
-						line: {
-							dataLabels: {
-								enabled: true
-							},
-							enableMouseTracking: true
-						}
-					},
-					series: [{
-						name: 'Tokyo',
-						data: [7.0, 6.9, 9.5, 14.5, 18.4, 21.5, 25.2, 27.5, 23.3, 18.3, 13.9, 9.6]
-					}, {
-						name: 'Boston',
-						data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
-					}, {
-						name: 'Karlsruhe',
-						data: [5.9, 5.2, 5.7, 9.5, 13.9, 17.2, 18.0, 17.6, 16.2, 12.3, 8.6, 6.8]
-					}]
-				});
+			createChartIfNotDone() {
+				if (!this._chart) {
+					this._chart = new LUBWChart(this.$.container);
+				}
 			}
 		}
 
